--- a/assets/css/misushi_popular_mdt.css
+++ b/assets/css/misushi_popular_mdt.css
@@ -1,3 +1,11 @@
+/*-----------------------------------*\
+  misushi_popular_mdt.css
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+\*-----------------------------------*/
+
 :root {
     /**
     * COLORS
