--- a/assets/css/misushi_gallery.css
+++ b/assets/css/misushi_gallery.css
@@ -1,3 +1,10 @@
+/*-----------------------------------*\
+  misushi_gallery.css
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+\*-----------------------------------*/
 :root {
 
     /**
