--- a/assets/css/misushi_checkout.css
+++ b/assets/css/misushi_checkout.css
@@ -1,3 +1,11 @@
+
+/*-----------------------------------*\
+  misushi_checkout.css
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+\*-----------------------------------*/
 :root {
     /**
      * COLORS
