--- a/assets/css/misushi_about_mdt.css
+++ b/assets/css/misushi_about_mdt.css
@@ -1,5 +1,10 @@
-/* TESTIMONIALS SECTION */
-
+/*-----------------------------------*\
+  misushi_about_mdt.css
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+\*-----------------------------------*/
 :root {
 
     /**
